# Cloak

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md
ansible/: ansible.cfg  deploy.yml  exp-batch-size.sh  exp-cache-size.sh  exp-diff-datasets.sh  exp-object-size.sh  exp-zipf-exponent.sh  experiment.yml  inventory  inventory-single
benchmark/exp-batch-size/: config.toml
benchmark/exp-batch-size/results/: res-ratio-workload-s1.0--client-req-per-sec 105000 --proxy-first-batch-size 1207.txt  res-ratio-workload-s1.0--client-req-per-sec 108000 --proxy-first-batch-size 1046.txt  res-ratio-workload-s1.0--client-req-per-sec 113000 --proxy-first-batch-size 888.txt  res-ratio-workload-s1.0--client-req-per-sec 126000 --proxy-first-batch-size 282.txt  res-ratio-workload-s1.0--client-req-per-sec 128000 --proxy-first-batch-size 732.txt  res-ratio-workload-s1.0--client-req-per-sec 144000 --proxy-first-batch-size 583.txt  res-ratio-workload-s1.0--client-req-per-sec 149000 --proxy-first-batch-size 433.txt  res-ratio-workload-s1.0--client-req-per-sec 64000 --proxy-first-batch-size 121.txt  res-ratio-workload-s1.0--client-req-per-sec 92000 --proxy-first-batch-size 1537.txt  (+11 more)
benchmark/exp-cache-size/: config.toml
benchmark/exp-diff-datasets/: eth-config.toml  eth-workload  netflix-config.toml  netflix-workload  s1.0-config.toml
benchmark/exp-diff-datasets/results/: res-stats-eth-workload.txt  (+2 more)
benchmark/exp-object-size/: config.toml
config/: config-default.toml
src/: budget_queue.rs  config.rs  lib.rs  shared_types.rs
src/proxy_lib/: crypto_lib.rs  mod.rs
(+74 files in other folders)
