[package]
name = "cloak-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = { version = "0.9.1", features = ["small_rng"] } 
openssl = {version = "0.10.68"}
clap = { version = "4.5.20", features = ["derive"] }
ndarray = "0.16.1"
bytemuck = "1.19.0"
mini-moka = "0.10.3"
tokio = { version = "1.41.1", features = ["full"] }
async-channel = "2.3.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.10"
rand_distr = "0.5.1"
ciborium = "0.2.2"
log = "0.4"
env_logger = "0.10"
csv = "1.3"
bitcode = "0.6.6"
thiserror = "2.0.17"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

[profile.release]
debug = true
